# depth-surge-3d

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  CODING_GUIDE.md  LICENSE  OPTICAL_FLOW_IMPROVEMENTS.md  README.md  REFACTORING_STATUS.md  TODO.md  ami-requirements.txt  ami-setup.sh  app.py  check_cuda.ps1  check_cuda.sh  codex-review.md  depth_surge_3d.py  depth_surge_3d_new.py  monitor-gpu.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_ui.ps1  run_ui.sh  setup.ps1  setup.sh  start.sh  test.sh
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLAUDE.md  CODEX_REVIEW_INSTRUCTIONS_0.9.0.md  CODING_GUIDE.md  CONTRIBUTING.md  INSTALLATION.md  PARAMETERS.md  PERFORMANCE.md  TODO.md  TROUBLESHOOTING.md  USAGE.md  VR_HEADSET_COMPATIBILITY.md
docs/archive/: codex-review-2026-01-17-response.md  completed-tasks.md  coverage-final-2026-01-17.md  coverage-session-2026-01-17-continued.md
scripts/: pre-commit-checks.ps1  pre-commit-checks.sh  run-unit-tests.ps1  run-unit-tests.sh
src/depth_surge_3d/: __init__.py
templates/: index.html
testing/: README.md  create_simple_test.py  create_test_video.py  fix_stereo.py
tests/: __init__.py
tests/integration/: test_end_to_end.py
tests/unit/: test_batch_analysis.py  test_check_cuda.py  test_console.py  test_constants.py  test_depth_cache.py  test_file_operations.py  test_image_processing.py  test_init.py  test_io_operations.py  test_motion_compensator.py  test_optical_flow_estimator.py  test_progress.py  test_resolution.py  test_stereo_projector.py  test_upscaler.py  test_utils_console.py  test_utils_resolution.py  test_video_depth_estimator.py  test_video_depth_estimator_da3.py  test_video_processing.py  test_video_processor.py  test_video_processor_steps.py  test_video_processor_upscaling.py  test_vram_manager.py
(+50 files in other folders)
